fix: sidebar and horizontal scrolling

--- a/styles.css
+++ b/styles.css
@@ -40,17 +40,21 @@ body {
   z-index: 20;
 }
 
-#section {
+section {
   height: 100vh;
+  position: relative;
+}
+
+article {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 #intro {
   display: flex;
   align-items: center;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
   user-select: none;
   z-index: 15;
 }
@@ -139,31 +143,29 @@ body {
 */
 
 #about {
-  margin-top: 250px;
-  height: fit-content;
-  width: fit-content;
-  margin-bottom: 1500px;
+  display: flex;
+  flex-direction: row;
+  gap: 50px;
+}
 
+#about div {
+  display: flex;
+  flex-direction: column;
 }
 
 #img1 {
-  height: 26%;
-  width: 26%;
-  user-select: none;
-  -webkit-user-drag: none;
-  margin-left: 350px;
+  height: 500px;
 }
 
 h2 {
   font-family: oakes grotesk;
+  left: -120px;
+  position: absolute;
   font-size: 64px;
   color: #303030;
   user-select: none;
-  margin-left: 150px;
+  white-space: nowrap;
   font-weight: lighter;
-  position: absolute;
-  top: 125%;
-  left: 32%;
 }
 
 .text1, .sunshine{
@@ -172,19 +174,32 @@ h2 {
 }
 
 .text1 {
+  z-index: 10;
   font-family: oakes grotesk light;
-  position: absolute;
-  top: 145%;
-  left: 49%;
-  width: 565px;
+  max-width: 565px;
   user-select: none;
   font-size: 24px;
 }
 
+@media screen and (max-width: 1500px) {
+  #about {
+    flex-direction: column;
+    align-items: center;
+
+    #blob {
+      top: 50%;
+    }
+
+    #img1 {
+      height: inherit;
+      width: 400px;
+    }
+  }
+}
+
 #line {
+  left: 460px;
   position: absolute;
-  top: 134.5%;
-  left: 69%;
   width: 195px;
   height: 1px;
   background-color: #303030;
@@ -268,6 +283,12 @@ h2 {
 .project {
   width: 100vw;
   height: 100vh;
+
+  display: inline-block;
+  color: white;
+  text-align: center;
+  padding: 14px;
+  text-decoration: none;
 }
 
 #besimplified {
@@ -300,8 +321,10 @@ h2 {
 
 #scroll {
   overflow-x: scroll;
+  overflow-y: hidden;
+  white-space: nowrap;
   height: 100vh;
-  width: 400vw;
+  width: 100vw;
 }
 
 #contact {
@@ -316,4 +339,18 @@ h2 {
   font-weight: 300;
   font-size: 28px;
   font-size: 68px;
+}
+
+
+
+.reveal{
+  position: relative;
+  transform: translateY(150px);
+  opacity: 0;
+  transition: 2s all ease;
+}
+
+.reveal.active{
+  transform: translateY(0);
+  opacity: 1;
 }
